--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -36,7 +36,7 @@
      <ul>
        <li ng-repeat="item in toBuyList.items">Buy {{item.quantity}} of {{item.name}} <button class="btn btn-default" ng-click="toBuyList.buyItem($index);"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
      </ul>
-     <div class="emptyMessage" ng-hide="toBuyList.items.length">Everything is bought!</div>
+     <div class="emptyMessage" ng-if="!toBuyList.items.length">Everything is bought!</div>
     </div>
 
     <!-- Already Bought List -->
@@ -45,7 +45,7 @@
      <ul>
        <li ng-repeat="item in alreadyBoughtList.items">Bought {{item.quantity}} of {{item.name}}</li>
      </ul>
-     <div class="emptyMessage" ng-hide="alreadyBoughtList.items.length">Nothing bought yet.</div>
+     <div class="emptyMessage" ng-if="!alreadyBoughtList.items.length">Nothing bought yet.</div>
     </div>
   </div>
 </div>
