--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <!-- found-items should be implemented as a component -->
-    <found-items style="clear:both;display:block;" found-items-attr="menu.found" on-remove="menu.removeItem(index);"></found-items>
+    <found-items style="clear:both;display:block;" found-items="menu.found" on-remove="menu.removeItem(index);"></found-items>
 
   </div>
 
